# matroska-demuxer

./: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE-ZLIB  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: block.rs  ebml.rs  element_id.rs  enums.rs  error.rs  lib.rs
tests/: lib.rs
tests/data/: hdr.mkv  multi_seekhead.mkv  no_cluster_position.mkv  simple.mkv  subtitles.mkv  subtitles_pgs.mkv  subtitles_vobsub.mkv
