[package]
name = "matroska-demuxer"
version = "0.3.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
description = "A demuxer that can demux Matroska and WebM container files."
license = "Zlib OR MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hasenbanck/matroska-demuxer"
categories = ["multimedia"]
keywords = ["matroska", "webm", "demuxer", "demux"]
edition = "2018"

[dependencies]
once_cell = "1.7"
